--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,12 @@
 insurance.provider.url=http://localhost:8080/insurance-service/getAllPlans
+
+server.port=8081
+spring.batch.job.enabled=false
+spring.batch.jdbc.initialize-schema=ALWAYS
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.show-sql = true
+spring.datasource.url = jdbc:postgresql://localhost:5432/Employee-Task
+spring.datasource.username = postgres
+spring.datasource.password = JAIjai@1234
