--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,7 @@
-
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.show-sql = true
+spring.datasource.url = jdbc:postgresql://localhost:5432/Employee-Task
+spring.datasource.username = postgres
+spring.datasource.password = JAIjai@1234
