--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.show-sql = true
 spring.datasource.url = jdbc:postgresql://localhost:5432/Employee-Task
 spring.datasource.username = postgres
 spring.datasource.password = JAIjai@1234
+
+insurance.provider.url=http://localhost:9191/insurance-service/getAllPlans
