--- a/application.properties
+++ b/application.properties
@@ -6,4 +6,5 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/Employee-Task
 spring.datasource.username = postgres
 spring.datasource.password = JAIjai@1234
 
-insurance.provider.url=http://localhost:9191/employee-service/getAllEmployees
+insurance.provider.url1=http://localhost:9191/employee-service/getAllEmployees
+insurance.provider.url2=http://localhost:9191/employee-service/viewEmployee
